--- a/index1.html
+++ b/index1.html
@@ -10,8 +10,8 @@
 		
 	</head>
 	<body>
-		<div></div>
-		<div class="toolbar">
+		<!--方法一：使用背景图片的方式-->
+		<!--<div class="toolbar">
 			<a href="javascript:;" class="toolbar-item toolbar-item-weixin">
 				<span class="toolbar-layer"></span>
 			</a>
@@ -20,7 +20,42 @@
 				<span class="toolbar-layer"></span>
 			</a>
 			<a href="javascript:;" class="toolbar-item toolbar-item-top"></a>
+		</div>-->
+		
+		<!--方法二：使用图标字体的方式-->
+		<div class="toobar">
+			<a href="javascript:;" class="toolbar-item">
+				<span class="toobar-btn">
+					<i class="toolbar-icon icon-chat iconfont"></i>
+					<span class="toolbar-text">公众<br/>账号</span>
+				</span>
+				<span class="toolbar-layer toolbar-layer-weixin"></span>
+			</a>
+			
+			<a href="javascript:;" class="toolbar-item">
+				<span class="toobar-btn">
+					<i class="toolbar-icon icon-yingdaicon04 iconfont"></i>
+					<span class="toolbar-text">意见<br/>反馈</span>
+				</span>
+			</a>
+			
+			<a href="javascript:;" class="toolbar-item">
+				<span class="toobar-btn">
+					<i class="toolbar-icon icon-5app iconfont"></i>
+					<span class="toolbar-text">APP<br/>下载</span>
+				</span>
+				<span class="toolbar-layer toolbar-layer-app"></span>
+			</a>
+			
+			<a href="javascript:;" class="toolbar-item">
+				<span class="toobar-btn">
+					<i class="toolbar-icon icon-verticalaligntop iconfont"></i>
+					<span class="toolbar-text">返回<br/>顶部</span>
+				</span>
+			</a>
+			
 		</div>
+		
 		
 	</body>
 </html>
