--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
 		</div>-->
 		
 		<!--方法二：使用图标字体的方式-->
-		<div class="toobar">
+		<!--<div class="toobar">
 			<a href="javascript:;" class="toolbar-item">
 				<span class="toobar-btn">
 					<i class="toolbar-icon icon-chat iconfont"></i>
@@ -54,6 +54,21 @@
 				</span>
 			</a>
 			
+		</div>-->
+		
+		<!--方法三：利用before和after 伪类的方式-->
+		<div class="toolbar">
+			<a href="javascript:;" class="toolbar-item toolbar-item-weixin">
+				<span class="toolbar-btn"></span>
+			</a><a href="javascript:;" class="toolbar-item toolbar-item-feedback">
+				<span class="toolbar-btn"></span>
+			</a>
+			<a href="javascript:;" class="toolbar-item toolbar-item-app">
+				<span class="toolbar-btn"></span>
+			</a>
+			<a href="javascript:;" class="toolbar-item toolbar-item-top">
+				<span class="toolbar-btn"></span>
+			</a>
 		</div>
 		
 		
