更改less.min的路径

--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,9 @@
 		<link rel="stylesheet/less" type="text/css" href="css/index1.less"/>
 		
 		<!--<link rel="stylesheet" href="css/index1.css" />-->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
+		<!--<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>-->
+		<!--<script src="http://cdn.huangjuntu.vip/js/less.min.js"></script>-->
+		<script src="js/less.min.js"></script>
 		
 	</head>
 	<body>
