--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,9 @@
 		<title></title>
 		
 		<link rel="stylesheet/less" type="text/css" href="css/index2.less" />
-		<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
+		<!--<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>-->
+		<!--<script src="http://cdn.huangjuntu.vip/js/less.min.js"></script>-->
+		<script src="js/less.min.js"></script>
 		
 	</head>
 	<body>
